apps/static-website/src/assets/styles/components/header.scss
@use "@fem-aec/tokens/dist/scss/mixins" as *;
@use "@fem-aec/tokens/dist/scss/tokens" as *;
@use "@/assets/styles/mixins" as *;

.header {
  display: grid;
  background-color: var(--fem-color-background-tertiary);

  > * {
    grid-area: 1/-1;
  }

  &__top {
    display: flex;
    align-items: center;
    justify-content: space-between;
    align-self: start;
    padding: 3.2rem 2.4rem;
    z-index: 1;
    border-bottom: 1px solid var(--fem-color-border-primary);

    @media screen and (min-width: 768px) {
      margin: 0 auto;
      padding-left: 0;
      padding-right: 0;
      width: 89.71%;
    }

    @media screen and (min-width: 1440px) {
      padding-top: 3.2rem;
      padding-bottom: 3.6rem;
      width: 77.11%;
    }
  }

  &__nav {
    order: -1;

    @media screen and (min-width: 1440px) {
      order: 0;
      margin: auto;
    }

    > .nav__list {
      display: none;

      @media screen and (min-width: 1440px) {
        display: flex;
        flex-direction: row;
      }
    }
  }

  &__cart {
    cursor: pointer;
    font-size: 0;
    align-items: center;
    justify-items: center;
    padding: .4rem;
    width: 31px;
    height: 28px;

    @extend %icon-mask;
    @extend %color-animation;

    @media screen and (min-width: 1440px) {
      margin-left: auto;
    }

    &:is(:hover,:focus)::after {
      background-color: var(--fem-color-fill-icon-primary-active);
    }

    &:focus {
      box-shadow: inset 0 0 0 2px var(--fem-color-fill-icon-primary-focus);
    }

    &::after {
      width: 23px;
      height: 20px;
      background-color: var(--fem-color-fill-icon-primary-rest);
      mask-image: url("@/assets/icons/icon-cart.svg");

      @extend %color-animation;
    }
  }
}

